<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/edit_done_item"
            android:title="@string/done"
            android:icon="@drawable/ic_done"
            android:contentDescription="@string/done"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/edit_notify_item"
            android:title="@string/notification"
            android:contentDescription="@string/notification"
            app:showAsAction="collapseActionView"/>

    <item
            android:id="@+id/edit_importance_item"
            android:title="@string/importance"
            android:contentDescription="@string/importance"
            app:showAsAction="collapseActionView"/>
</menu>