<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.NoteListFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="false">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                app:title="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorSurface"
                app:layout_scrollFlags="scroll|snap"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/filter_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="12dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:text="@string/filter_by"/>

            <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleSelection="true"
                        app:singleLine="true">

                    <com.google.android.material.chip.Chip
                            android:id="@+id/importance_chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/importance"
                            style="@style/Widget.Material3.Chip.Filter.Elevated"/>

                    <com.google.android.material.chip.Chip
                            android:id="@+id/notification_chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notification"
                            style="@style/Widget.Material3.Chip.Filter.Elevated"/>

                    <com.google.android.material.chip.Chip
                            android:id="@+id/creation_date_chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/creation_date"
                            style="@style/Widget.Material3.Chip.Filter.Elevated"/>

                    <com.google.android.material.chip.Chip
                            android:id="@+id/alphabet_chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alphabet"
                            android:layout_marginEnd="12dp"
                            style="@style/Widget.Material3.Chip.Filter.Elevated"/>
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:text="@string/lorem_ipsum"/>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/add_note"
            android:layout_margin="16dp"
            android:layout_gravity="end|bottom"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>