<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/filter_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:text="@string/filter_by"/>

        <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:singleLine="true">

                <com.google.android.material.chip.Chip
                        android:id="@+id/importance_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/importance"
                        style="@style/Widget.Material3.Chip.Filter.Elevated"/>

                <com.google.android.material.chip.Chip
                        android:id="@+id/notification_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification"
                        style="@style/Widget.Material3.Chip.Filter.Elevated"/>

                <com.google.android.material.chip.Chip
                        android:id="@+id/creation_date_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/creation_date"
                        android:layout_marginEnd="12dp"
                        style="@style/Widget.Material3.Chip.Filter.Elevated"/>
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:name="com.example.noteapplication.NoteListFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_block"/>

</androidx.constraintlayout.widget.ConstraintLayout>